# aot-backend

./: Cargo.toml  Dockerfile  Dockerfile.prod  dummy_data.sql
src/: models.rs  schema.rs
src/api/attack/: mod.rs  socket.rs  util.rs
src/api/auth/: mod.rs
src/api/defense/: mod.rs  util.rs
src/api/game/: mod.rs
src/api/inventory/: mod.rs  util.rs
src/api/user/: mod.rs
src/validator/: mod.rs  state.rs  util.rs
